# tpch-datagen

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
sql/: create_views.sql
src/tpch_datagen/: config.py  datagen.py  utils.py
